--- a/12_Testimonial website/index.html
+++ b/12_Testimonial website/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TestiFlow - Testimonials Made Easy</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" defer></script>
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -13,10 +16,12 @@
         <div class="container nav-container">
             <a href="#" class="logo">TestiFlow</a>
             <div class="nav-links">
-                <a href="#features">Features</a>
+                <a href="#home">Home</a>
+                <a href="#plans">Plans</a>
+                <a href="#about">About Us</a>
                 <a href="#testimonials">Testimonials</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#about">About</a>
+                <a href="#categories">Categories</a>
+                
             </div>
             <div class="nav-buttons">
                 <a href="#" class="btn">Login</a>
@@ -27,14 +32,18 @@
 
     <div class="hero">
         <div class="container hero-content">
-            <h1>Testimonials Made Easy</h1>
-            <p>Collect, manage, and showcase your customer testimonials effortlessly.</p>
+            <h1>Quick and Easy Testimonials</h1>
+            <p>It allows users to automate the gathering of feedback, organize it in a central location, and share it seamlessly across various platforms.</p>
             <a href="#" class="btn">Start for free</a>
         </div>
     </div>
 
+
+<!-- Final Review  Section -->
     <div class="container">
         <div class="testimonial-grid">
+
+            <!-- small Review cards -->
             <div class="testimonial-card">
                 <div class="client-info">
                     <img src="img/user.png" alt="John Doe" class="client-image">
@@ -88,6 +97,58 @@
                 </div>
                 <p>"I've collected twenty testimonials in just two days. The ease of use and professional appearance have exceeded my expectations!"</p>
             </div>
+            <div class="testimonial-card">
+                <div class="client-info">
+                    <img src="img/user4.jpg" alt="Mike Brown" class="client-image">
+                    <div class="client-details">
+                        <h3>Simone Lewis</h3>
+                        <p>Associate Director</p>
+                    </div>
+                </div>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <p>"I've collected twenty testimonials in just two days. The ease of use and professional appearance have exceeded my expectations!"</p>
+            </div>
+            <div class="testimonial-card">
+                <div class="client-info">
+                    <img src="img/user5.webp" alt="Sarah Johnson" class="client-image">
+                    <div class="client-details">
+                        <h3>Sarah Marin</h3>
+                        <p>Cheif Architect</p>
+                    </div>
+                </div>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>"We've already seen a tangible impact on revenue and conversion since implementing this solution. The results speak for themselves!"</p>
+            </div>
+
+            <div class="testimonial-card">
+                <div class="client-info">
+                    <img src="img/user6.jpg" alt="Mike Brown" class="client-image">
+                    <div class="client-details">
+                        <h3>Molly Clare</h3>
+                        <p>Full Stack Deveoper</p>
+                    </div>
+                </div>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <p>"I've collected twenty testimonials in just two days. The ease of use and professional appearance have exceeded my expectations!"</p>
+            </div>
         </div>
     </div>
 
@@ -111,6 +172,22 @@
                 <i class="fas fa-calendar"></i> Schedule a Call
             </div>
         </div>
+    </div>
+
+
+    <!-- Suggested Review pop ups   -->
+    <div class="review-popup" id="reviewPopup">
+        <span class="close-btn" onclick="closeReviewPopup()">&times;</span>
+        <h4>Customer Review</h4>
+        <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <p>"TestiFlow has transformed how we collect and display testimonials. It's incredibly user-friendly!"</p>
+        <p><strong>- Alex Chen, Product Manager</strong></p>
     </div>
 
     <script src="script.js"></script>
