--- a/13_My Portfolio/index.html
+++ b/13_My Portfolio/index.html
@@ -48,7 +48,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi,<br/> I'm Joyline Rencita <span>Dsouza</span></h2>
+    <h2>Hi 👋,<br/> I'm Joyline Rencita <span>Dsouza</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
