--- a/14_Skills Section/index.html
+++ b/14_Skills Section/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Stack</title>
-    <link rel="stylesheet" href="trial.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -140,6 +140,6 @@
     </div>
         
 
-    <script src="trial.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
