--- a/16_Projects_Section/index.html
+++ b/16_Projects_Section/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="trial.css">
     <link rel="shortcut icon" href="x.png" type="image/x-icon">
+    <!-- swiperjs cdn -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <!-- remixicons cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- fontawesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 
@@ -21,24 +29,70 @@
 
     <div class="projects">
         <div class="project-card mern">
-            <img src="p.png" alt="Project 1">
-            <p>Instagram MERN - A social media clone using MERN stack.</p>
+            <div class="project-image">
+                <img src="p.png" alt="Project 1">
+                <div class="social">
+                    <a href="https://github.com/Joyline-Rencita-Dsouza"><i class="fab fa-github"></i></a>
+                    <a href="https://joyline-rencita-dsouza.github.io/TechStack_My-Team/"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>Instagram MERN</h4>
+            <p>A social media clone using MERN stack.</p>
         </div>
         <div class="project-card mern">
-            <img src="p.png" alt="Project 2">
-            <p>Flipkart MERN - An e-commerce platform clone using MERN stack.</p>
+            <div class="project-image">
+                <img src="p.png" alt="Project 2">
+                <div class="social">
+                    <a href="https://github.com/Joyline-Rencita-Dsouza"><i class="fab fa-github"></i></a>
+                    <a href="https://joyline-rencita-dsouza.github.io/TechStack_My-Team/"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>Flipkart MERN</h4>
+            <p>An e-commerce platform using MERN stack.</p>
         </div>
         <div class="project-card mobile">
-            <img src="p.png" alt="Project 3">
-            <p>Weather App - A mobile app to check weather forecasts.</p>
+            <div class="project-image">
+                <img src="p.png" alt="Project 3">
+                <div class="social">
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>Weather App</h4>
+            <p>A mobile app to check weather forecasts.</p>
         </div>
         <div class="project-card aiml">
-            <img src="p.png" alt="Project 4">
-            <p>AI Chatbot - A chatbot using NLP and Machine Learning.</p>
+            <div class="project-image">
+                <img src="p.png" alt="Project 4">
+                <div class="social">
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>AI Chatbot</h4>
+            <p>A simple chatbot using NLP and Machine Learning.</p>
         </div>
         <div class="project-card basic-web">
-            <img src="p.png" alt="Project 5">
-            <p>Personal Blog - A simple blog website.</p>
+            <div class="project-image">
+                <img src="p.png" alt="Project 5">
+                <div class="social">
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>Personal Blog</h4>
+            <p>A simple blog website which contains my projects.</p>
+        </div>
+        <div class="project-card mern">
+            <div class="project-image">
+                <img src="p.png" alt="Project 6">
+                <div class="social">
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fas fa-video"></i></a>
+                </div>
+            </div>
+            <h4>Flipkart MERN</h4>
+            <p>An e-commerce platform clone using MERN stack.</p>
         </div>
 
     </div>
