--- a/16_Projects_Section/index.html
+++ b/16_Projects_Section/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Projects</title>
-    <link rel="stylesheet" href="trial.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="x.png" type="image/x-icon">
     <!-- swiperjs cdn -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
