--- a/25_Qualification-Section-Demo/index.html
+++ b/25_Qualification-Section-Demo/index.html
@@ -24,8 +24,8 @@
         <div class="card left">
           <div class="icon-left"><i class="fas fa-briefcase"></i></div> <!-- Suitcase Icon -->
           <div class="details">
-            <h3>Solar Ladder</h3>
-            <p>Full Stack Developer | Jul 2023 - Present</p>
+            <h3>CodersCave</h3>
+            <p>Full Stack Developer | Jul 2023 - Sept 2023</p>
             <ul>
               <li>Integrated Facebook leads using webhook and OAuth.</li>
               <li>Led Node.js migration with feature updates and bug fixes.</li>
@@ -36,7 +36,7 @@
         <div class="card right">
           <div class="icon-right"><i class="fas fa-briefcase"></i></div> <!-- Suitcase Icon -->
           <div class="details">
-            <h3>Panchavaktra Advisory LLP</h3>
+            <h3>InternPE</h3>
             <p>Full Stack Developer Intern | Dec 2022 - Feb 2023</p>
             <ul>
               <li>Directed development of B2B platform features.</li>
