--- a/25_Qualification-Section-Demo/index.html
+++ b/25_Qualification-Section-Demo/index.html
@@ -44,6 +44,18 @@
             </ul>
           </div>
         </div>
+        <div class="card left">
+          <div class="icon-left"><i class="fas fa-briefcase"></i></div> <!-- Suitcase Icon -->
+          <div class="details">
+            <h3>CodersCave</h3>
+            <p>Full Stack Developer | Jul 2023 - Sept 2023</p>
+            <ul>
+              <li>Integrated Facebook leads using webhook and OAuth.</li>
+              <li>Led Node.js migration with feature updates and bug fixes.</li>
+              <li>Crafted codemod scripts for seamless migrations.</li>
+            </ul>
+          </div>
+        </div>
         
       </div>
       <div id="education" class="content">
@@ -66,6 +78,17 @@
             <ul>
               <li>Achieved top scores in Computer Science and Mathematics.</li>
               <li>Participated in national-level coding competitions.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card left">
+          <div class="icon-left"><i class="fas fa-graduation-cap"></i></div> <!-- Graduation Hat Icon -->
+          <div class="details">
+            <h3>XYZ University</h3>
+            <p>B.E. in Computer Science | 2020 - 2024</p>
+            <ul>
+              <li>Graduated with honors in Full Stack Development.</li>
+              <li>Top 5% in class with a focus on web technologies.</li>
             </ul>
           </div>
         </div>
