--- a/36_Github Profiles/index.html
+++ b/36_Github Profiles/index.html
@@ -13,6 +13,6 @@
             <input type="text" id="search" placeholder="Search a Github UserName" />
         </form>
         <main id="main"></main>
-        <h3 style="color:#fff;" >Project Created By <a href="https://github.com/saikatsahana77" target="_blank">Saikat Sahana</a></h3>
+        <h3 style="color:#fff;" >Project Created By <a href="https://github.com/Joyline-Rencita" target="_blank">Joyline Rencita Dsouza</a></h3>
     </body>
 </html>
