--- a/37_Keyboard/index.html
+++ b/37_Keyboard/index.html
@@ -108,7 +108,7 @@
         <div class="row five">
             <button class="other">ctrl</button>
             <button class="other">fn</button>
-            <button class="other">win</button>
+            <button class="other">window</button>
             <button class="other">alt</button>
             <button class="space">space</button>
             <button class="other">alt</button>
