--- a/44_BMI Calculator/index.html
+++ b/44_BMI Calculator/index.html
@@ -12,7 +12,7 @@
             <h1>BMI Calculator</h1>
             <div class="content">
                 <div class="input">
-                    <label for="age">Age</label>
+                    <label for="age">Age:</label>
                     <input type="text" id="age" autocomplete="off" required>
                 </div>
                 <div class="gender">
@@ -28,11 +28,11 @@
                 
                 <div class="containerhw">
                     <div class="inputh">
-                        <label for="heightnum">Height(cm)</label>
+                        <label for="heightnum">Height(cm):</label>
                         <input type="number" name="" id="heightnum">
                     </div>
                     <div class="inputw">
-                        <label for="weightnum">Weight(kg)</label>
+                        <label for="weightnum">Weight(kg):x</label>
                         <input type="number" id="weightnum">
                     </div>
                 </div>
